# pybinding

./: .gitignore  CLAUDE.ko.md  CLAUDE.md  CMakeLists.txt  MIGRATION_GUIDE.ko.md  MIGRATION_GUIDE.md  MODERNIZATION_PLAN.ko.md  MODERNIZATION_PLAN.md  MODERNIZATION_STATUS.md  MODERNIZATION_SUMMARY.ko.md  MODERNIZATION_SUMMARY.md  README_MODERNIZATION.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
.sisyphus/: ultrawork-state.json
cppcore/: CMakeLists.txt
cppcore/include/compute/: kernel_polynomial.hpp  lanczos.hpp
cppcore/include/detail/: opaque_alias.hpp  strategy.hpp
cppcore/include/hamiltonian/: HamiltonianModifiers.hpp
cppcore/include/kpm/: Moments.hpp
cppcore/include/numeric/: arrayref.hpp  dense.hpp  random.hpp
cppcore/include/support/: cppfuture.hpp  format.hpp  simd.hpp  variant.hpp
cppcore/include/system/: Foundation.hpp
cppcore/src/: KPM.cpp  Lattice.cpp
cppcore/src/solver/: FEAST.cpp
cppcore/src/system/: Registry.cpp
cppcore/src/utils/: Chrono.cpp
cppcore/tests/: CMakeLists.txt
cppmodule/: CMakeLists.txt
pybinding/: __about__.py  __init__.py  chebyshev.py  constants.py  greens.py  lattice.py  leads.py  model.py  modifier.py  parallel.py  pltutils.py  results.py  shape.py  solver.py  system.py
pybinding/repository/: examples.py  group6_tmd.py  phosphorene.py
pybinding/repository/graphene/: __init__.py  constants.py  lattice.py  modifiers.py  shape.py  utils.py
pybinding/support/: alias.py  collections.py  deprecated.py  fuzzy_set.py  inspect.py  kwant.py  pickle.py  structure.py
pybinding/utils/: cpuinfo.py  misc.py  progressbar.py  time.py
tests/: conftest.py  test_kpm.py  test_kwant.py  test_lattice.py  test_leads.py  test_model.py  test_modifiers.py  test_parallel.py  test_pickle.py  test_results.py  test_shape.py  test_solver.py  test_system.py
tests/utils/: compare_figures.py  fuzzy_equal.py  path.py
